# VariationalRegistration

./: CMakeLists.txt  CTestConfig.cmake  README  README.md  README.rst  TODO  itk-module.cmake  setup.py
.circleci/: config.yml
include/: itkContinuousBorderWarpImageFilter.h  itkContinuousBorderWarpImageFilter.hxx  itkMultiResolutionVariationalRegistration.h  itkMultiResolutionVariationalRegistration.hxx  (+32 more)
src/: CMakeLists.txt  ImageCompare.cxx  VariationalRegistrationMain.cxx  itkContinuousBorderWarpImageFilter.h  itkContinuousBorderWarpImageFilter.hxx  itkMultiResolutionVariationalRegistration.h  itkMultiResolutionVariationalRegistration.hxx  itkVariationalDiffeomorphicRegistrationFilter.h  itkVariationalDiffeomorphicRegistrationFilter.hxx  itkVariationalRegistrationDemonsFunction.h  itkVariationalRegistrationDemonsFunction.hxx  itkVariationalRegistrationDiffusionRegularizer.h  itkVariationalRegistrationDiffusionRegularizer.hxx  itkVariationalRegistrationElasticRegularizer.h  itkVariationalRegistrationElasticRegularizer.hxx  itkVariationalRegistrationFilter.h  itkVariationalRegistrationFilter.hxx  itkVariationalRegistrationFunction.h  itkVariationalRegistrationFunction.hxx  itkVariationalRegistrationGaussianRegularizer.h  itkVariationalRegistrationGaussianRegularizer.hxx  itkVariationalRegistrationIncludeRequiredIOFactories.h  itkVariationalRegistrationLogger.h  itkVariationalRegistrationLogger.hxx  itkVariationalRegistrationNCCFunction.h  itkVariationalRegistrationNCCFunction.hxx  itkVariationalRegistrationRegularizer.h  itkVariationalRegistrationSSDFunction.h  itkVariationalRegistrationSSDFunction.hxx  itkVariationalRegistrationStopCriterion.h  itkVariationalRegistrationStopCriterion.hxx  itkVariationalSymmetricDiffeomorphicRegistrationFilter.h
src/Baseline/: ActiveThirionDiffusive2D.tif  ActiveThirionElastic2D.tif  NCCGauss2D.tif  PassiveThirionGauss2D.tif  SSDGauss2D.tif  SymmetricThirionGauss2D.tif
src/win32_compatibility/: getopt.c  getopt.h
(+35 files in other folders)
